--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "src/api/json-simple-1.1.1.jar",
-        "src/api/gson-2.8.2.jar",
         "libs/json-simple-1.1.1.jar",
-        "libs/gson-2.8.2.jar"
+        "libs/gson-2.8.2.jar",
+        "libs/JDA-5.0.0-beta.2-javadoc.jar",
+        "libs/JDA-5.0.0-beta.2-sources.jar",
+        "libs/JDA-5.0.0-beta.2-withDependencies-min.jar"
     ]
 }
