--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,11 @@
         "lib/**/*.jar",
         "libs/json-simple-1.1.1.jar",
         "libs/gson-2.8.2.jar",
-        "libs/JDA-5.0.0-beta.2-javadoc.jar",
-        "libs/JDA-5.0.0-beta.2-sources.jar",
-        "libs/JDA-5.0.0-beta.2-withDependencies-min.jar"
+        "libs/JDA-5.0.0-beta.3.jar",
+        "libs/JDA-5.0.0-beta.3-javadoc.jar",
+        "libs/JDA-5.0.0-beta.3-sources.jar",
+        "libs/JDA-5.0.0-beta.3-withDependencies.jar",
+        "libs/JDA-5.0.0-beta.3-withDependencies-min.jar",
+        "libs/JDA-5.0.0-beta.3-withDependencies-no-opus.jar"
     ]
 }
